--- a/make/makefile
+++ b/make/makefile
@@ -1,4 +1,4 @@
-all: clear bison flex
+all:  bison flex start
 
 bison:
 	win_bison.exe -d -y ..\main\golang.y
@@ -6,8 +6,6 @@ bison:
 flex:
 	win_flex.exe ..\main\golang.l
 	gcc y.tab.c lex.yy.c -o ..\golang -lm
-clear:
-	del ..\golang.exe
-	del y.tab.c
-	del y.tab.h
-	del lex.yy.c
+
+start:
+	../golang.exe ../test.txt
