--- a/make/makefile
+++ b/make/makefile
@@ -7,9 +7,10 @@ flex:
 	win_flex.exe ..\main\golang.l
 	gcc y.tab.c lex.yy.c -o ..\golang -lm
 clear:
-	del ../golang.exe
+	del ..\golang.exe
 	del y.tab.c
 	del y.tab.h
 	del lex.yy.c
+	del y.output
 start:
 	../golang.exe ../test.txt
