--- a/make/makefile
+++ b/make/makefile
@@ -1,15 +1,16 @@
 all: bison flex start
 
 bison:
-	win_bison.exe -d -y ..\main\golang.y
+	win_bison.exe -d -y -v ..\main\golang.y
 
 flex:
 	win_flex.exe ..\main\golang.l
 	gcc y.tab.c lex.yy.c -o ..\golang -lm
 clear:
-	del ..\golang.exe
 	del y.tab.c
 	del y.tab.h
 	del lex.yy.c
+	del y.output
+	del ..\golang.exe
 start:
 	../golang.exe ../test.txt
